--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
       <!-- Logo section -->
 
-      <img class="logo-discord" src="C:\Users\Tawfiq Mawani\Downloads\Discord-Logo.png" alt="logo">
+      <img class="logo-discord" src="Discord-Logo.png" alt="logo">
 
       <!-- Cards Template -->
 
